--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Mongoose Flights</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1>Mongoose Flights</h1>
-    <a href="/">HOME</a> |
-    <a href="/flights">ALL FLIGHTS</a> |
-    <a href="/flights/new">ADD FLIGHT</a>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <script defer src="/javascripts/main.js"></script>
+  <title>Mongoose Flights | <%= title %></title>
+</head>
+
+<body>
+  <header id="nav-wrapper">
+    <nav id="nav">
+      <div class="nav left">
+        <span class="gradient skew"><h1 class="logo un-skew"><a href="/flights">Mongoose Flights</a></h1></span>
+      </div>
+      <div class="nav right">
