--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -1,10 +1,10 @@
 <%- include('../partials/header') %>
-<a href="/flights/<%= flight._id %>" id="all" class="nav-link active"><span class="nav-link-span"><span class="u-nav">Flight Details</span></span></a>
-<a href="/flights" class="nav-link"><span class="nav-link-span"><span class="u-nav">All Flights</span></span></a>
-<a href="/flights/new" class="nav-link"><span class="nav-link-span"><span class="u-nav">New Flight</span></span></a>
-</div>
-</nav>
-</header>
+        <a href="/flights/<%= flight._id %>" id="all" class="nav-link active"><span class="nav-link-span"><span class="u-nav">Flight Details</span></span></a>
+        <a href="/flights" class="nav-link"><span class="nav-link-span"><span class="u-nav">All Flights</span></span></a>
+        <a href="/flights/new" class="nav-link"><span class="nav-link-span"><span class="u-nav">New Flight</span></span></a>
+      </div>
+    </nav>
+  </header>
 <main>
 <div class="top"><h2>Flight Details</h2></div>
 <section id="show-page">
@@ -67,6 +67,7 @@
 <div class="forms">
 <h2>Enter a Destination:</h2>
 <form action="/flights/<%= flight._id %>/destinations" method="POST">
+
   <label>Destination:</label>
   <select name="airport">
     <option value="AUS">AUS</option>
@@ -75,13 +76,47 @@
     <option value="LAX">LAX</option>
     <option value="SAN">SAN</option>
   </select><br>
+
   <label>Arrival Time:</label>
   <input type="datetime-local" name="arrival" value=/><br>
   <input type="submit" value="Submit" />
 </form>
 </div>
 <br>
-<form action="/flights/<%= flight._id %>?_method=DELETE" method="POST" >
-  <button class="remove" type="submit">DELETE FLIGHT</button>
-</form>
+<h2>Tickets: <button class="tix" onclick="window.location.href='/flights/<%= flight._id %>/tickets/new'">Add Ticket</button></h2>
+  <% if (ticket.length) { %>
+  <table>
+    <thead>
+      <tr>
+        <th>Seat</th>
+        <th>Price</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody class="tb1">
+      <% ticket.forEach((t) => { %>
+      <tr>
+        <th class="dest">
+            <i class="fas fa-chair"></i>
+            <%= t.seat %></th>
+        <td class="td1">
+          <i class="fas fa-dollar-sign"></i>
+          <%= t.price %></td>
+        <td class="detail">
+          <form action="/tickets/<%= t.flight %>/<%= t._id %>?_method=DELETE" method="POST">
+          <button class="delete" type="submit">
+            <span>remove</span>
+            <div class="icon">
+              <i class="fa fa-times"></i>
+              <i class="fa fa-check"></i>
+            </div>
+          </button>
+          </form>
+        </td>
+      </tr>
+      <% }); %>
+    </tbody>
+  </table>
+  <% } %>
+<form action="/flights/<%= flight._id %>?_method=DELETE" method="POST" ><button class="remove" type="submit">DELETE FLIGHT</button></form>
 </main>
