--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,37 +1,47 @@
 <%- include('../partials/header') %>
-        <a href="/flights" id="all" class="nav-link"><span class="nav-link-span"><span class="u-nav">All Flights</span></span></a>
-        <a href="/flights/new" id="new" class="nav-link active"><span class="nav-link-span"><span class="u-nav">New Flight</span></span></a>
-      </div>
-    </nav>
-  </header>
+<nav>
+  <a href="/flights" id="all-flights" class="nav-link">
+    <span class="nav-link-span">
+      <span class="u-nav">All Flights</span>
+    </span>
+  </a>
+  <a href="/flights/new" id="new-flight" class="nav-link active">
+    <span class="nav-link-span">
+      <span class="u-nav">New Flight</span>
+    </span>
+  </a>
+</nav>
+</header>
 <main>
-<div class="top"><h2>New Flight</h2></div>
-<div class="forms">
-<form action="/flights" method="POST">
-  <label>Airline:</label>
-    <select name="airline">
-      <option value="American">American</option>
-      <option value="Delta">Delta</option>
-      <option value="Southwest">Southwest</option>
-      <option value="United">United</option>
-    </select>
-<br>
-  <label>Airport:</label>
-    <select name="airport">
-      <option value="ATL">ATL</option>
-      <option value="DFW">DFW</option>
-      <option value="DEN">DEN</option>
-      <option value="LAX">LAX</option>
-      <option value="SAN">SAN</option>
-    </select>
-<br>
-  <label>Flight Number:</label>
-    <input type="number" name="flightNo" required>
-<br>
-  <label>Departs:</label>
-    <input type="datetime-local" name="departs" value="<%= departsDate %>">
-<br>
-  <input type="submit" value="Add Flight">
-</form>
-</div>  
+  <div class="top">
+    <h2>New Flight</h2>
+  </div>
+  <div class="forms">
+    <form action="/flights" method="POST">
+      <label>Airline:</label>
+      <select name="airline">
+        <option value="American">American</option>
+        <option value="Delta">Delta</option>
+        <option value="Southwest">Southwest</option>
+        <option value="United">United</option>
+      </select>
+      <br>
+      <label>Airport:</label>
+      <select name="airport">
+        <option value="ATL">ATL</option>
+        <option value="DFW">DFW</option>
+        <option value="DEN">DEN</option>
+        <option value="LAX">LAX</option>
+        <option value="SAN">SAN</option>
+      </select>
+      <br>
+      <label>Flight Number:</label>
+      <input type="number" name="flightNo" required>
+      <br>
+      <label>Departs:</label>
+      <input type="datetime-local" name="departs" value="<%= departsDate %>">
+      <br>
+      <button  class="submit">Add Flight</button>
+    </form>
+  </div>
 </main>
