fixed the dropdown bug

--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -28,11 +28,12 @@
       <br>
       <label>Airport:</label>
       <select name="airport">
-        <option value="ATL">ATL</option>
         <option value="DFW">DFW</option>
         <option value="DEN">DEN</option>
         <option value="LAX">LAX</option>
         <option value="SAN">SAN</option>
+        <option value="ATL">ATL</option>
+        <option value="AUS">AUS</option>
       </select>
       <br>
       <label>Flight Number:</label>
