--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -86,13 +86,13 @@
         <option value="DEN">DEN</option>
         <option value="LAX">LAX</option>
         <option value="SAN">SAN</option>
+        <option value="ATL">ATL</option>
       </select>
       <br>
       <label>Arrival Time:</label>
       <input type="datetime-local" name="arrival" value="" />
       <br>
       <button class="submit">Submit</button> 
-
     </form>
   </div>
   <br>
