--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,14 +1,10 @@
 <%- include('../partials/header') %>
 <nav>
   <a href="/flights" id="new-all-flights" class="nav-link active">
-    <span class="nav-link-span">
-      <span class="u-nav">All Flights</span>
-    </span>
+    <span class="nav-link-span u-nav">All Flights</span>
   </a>
   <a href="/flights/new" id="new-flight" class="nav-link">
-    <span class="nav-link-span">
-      <span class="u-nav">New Flight</span>
-    </span>
+    <span class="nav-link-span u-nav">New Flight</span>
   </a>
 </nav>
 </header>
@@ -20,7 +16,7 @@
     <table class="flight-table">
       <thead>
         <tr>
-          <th class="itle">Airline</th>
+          <th class="title">Airline</th>
           <th class="title">Airport</th>
           <th class="title">Flight #</th>
           <th class="title">Day</th>
