--- a/views/tickets/new.ejs
+++ b/views/tickets/new.ejs
@@ -1,14 +1,10 @@
 <%- include('../partials/header') %>
 <nav>
   <a href="/flights" id="all" class="nav-link">
-    <span class="nav-link-span">
-      <span class="u-nav">All Flights</span>
-    </span>
+    <span class="nav-link-span u-nav">All Flights</span>
   </a>
   <a href="/flights/new" id="new-flight" class="nav-link">
-    <span class="nav-link-span">
-      <span class "u-nav">New Flight</span>
-    </span>
+    <span class="nav-link-span u-nav">New Flight</span>
   </a>
 </nav>
 </header>
